# python_2_homeworks

./: README.md
hw_2/: pyproject.toml
hw_2/artifacts/: test.tex
hw_2/simple_latex_generator/: example.py  simple_latex_generator.py
hw_2/simple_latex_generator/artifacts/: readme.md  test.tex
hw_3/: hw_3_1_and_3.py  hw_3_2.py  pyproject.toml
hw_3/artifacts/: A.txt  AB.txt  B.txt  C.txt  CD.txt  hash.txt
hw_4/: hw_4_1.py  hw_4_2.py  hw_4_3.py  pyproject.toml
hw_4/artifacts/: hw_4_1_results.txt  hw_4_2_results.txt
